<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".MantMascotaActivity">
        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivMascotaImage"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginRight="50dp"
                android:background="@drawable/image_rounded"
                android:clipToOutline="true"
                android:cropToPadding="false"
                android:minHeight="60dp"
                tools:srcCompat="@tools:sample/avatars"
                android:scaleType="centerCrop"/>

            <ImageButton
                android:id="@+id/ibSelecionarImagen"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@null"
                android:onClick="saludo"
                app:srcCompat="@drawable/btn_img" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_mascota"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>


        <EditText
            android:id="@+id/etNombreMascota"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#FFFAFA"
            android:elevation="10dp"
            android:paddingLeft="15dp"
            tools:text="Hola" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raza"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/etRaza"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="15dp"
            tools:text="Hola"
            android:elevation="10dp"
            android:backgroundTint="#FFFAFA"
            android:background="@drawable/rounded_corner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/etSexo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="15dp"
            tools:text="Hola"
            android:elevation="10dp"
            android:backgroundTint="#FFFAFA"
            android:background="@drawable/rounded_corner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/etFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#FFFAFA"
            android:elevation="10dp"
            android:inputType="date|datetime"
            android:paddingLeft="15dp"
            tools:text="Hola" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Descripcion"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#FFFAFA"
            android:elevation="10dp"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:paddingLeft="15dp"
            tools:text="Hola" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <android.widget.Button
                android:id="@+id/btRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_rounded_corner"
                android:backgroundTint="@color/pink"
                android:minWidth="226dp"
                android:text="@string/guardar"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_corner"
                android:backgroundTint="@color/brown"
                android:minWidth="226dp"
                android:text="@string/cancelar"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
